Fix color contrast

--- a/src/component/VideoCard/VideoCard.module.css
+++ b/src/component/VideoCard/VideoCard.module.css
@@ -22,6 +22,6 @@
     border-radius: 0.5rem;
     padding: 0.5rem;
     width: fit-content;
-    background-color: #f59e0b;
+    background-color: #78350f;
     color: #fef3c7;
 }
